fixed change color design and image cropper modal

--- a/public/assets/css/chat.less
+++ b/public/assets/css/chat.less
@@ -398,10 +398,7 @@
           }
         }
         .message-row {
-          padding:20px 5px 5px 5px;
-         // background: rgba(@grayRGB , .2);
-         
-         
+          padding:20px 5px 5px 5px;         
           box-sizing: border-box;
           margin-bottom: 5px;
          
@@ -411,10 +408,20 @@
     
             .user-message {
               display: flex;
-             // justify-content: center;
-    
               align-items: center;
+
+              .text {    
+                width: auto;
+                max-width: 30vw;
+                padding:4px 6px ;
+                box-sizing: border-box;
+                text-align: left;
+                word-wrap: break-word;
+                clear: both;
     
+                border:1px solid ;
+                border-radius: 10px 10px 10px 0;
+              }
     
               .msgDocument {
                 padding-top: 10px;
@@ -428,6 +435,7 @@
                 margin-top: 18px;
     
               }
+
               .msgImg img {
                 width: 215px !important;
                 height: 250px;
@@ -450,6 +458,7 @@
                 }
               }
             }
+
             .time {
               font-size: 12px;
               padding: 5px;
@@ -463,24 +472,6 @@
               width: 50px;
               height: 50px;
               margin: 0px 14px 0 0;
-            }
-    
-            .user-message {
-              .text {
-                // background-color: rgba(128,0,128,.3);
-                // border: 2px solid purple;
-                // border: 1px solid white;    
-                width: auto;
-                max-width: 65vw;
-                padding:4px 6px ;
-                box-sizing: border-box;
-                text-align: left;
-                word-wrap: break-word;
-                clear: both;
-    
-                border:1px solid ;
-                border-radius: 10px 10px 10px 0;
-              }
             }
           }
         
@@ -512,16 +503,46 @@
               display: flex;
               align-items: center;
               flex-direction: row-reverse;
+
+              .text{
+                width: auto;
+                max-width:30vw;
+                padding: 4px 6px;
+                box-sizing: border-box;
+                text-align: left;
+                word-wrap: break-word;
+                clear: both;
+                border: 1px solid;
+                border-radius: 10px 10px 0 10px;
+              }
+
+              .send-icon {
+                img{
+                  width: 15px;
+                  border: 1px solid rgba(255,255,255, .5);
+                  opacity: 0.5;
+                  margin-left: 10px;
+                }
+    
+                &.high {
+                  img {
+                    opacity: 1;
+                  }
+                }
+              }
+
               .msgDocument {
                 padding-top: 10px;
                 box-sizing: border-box;
               }
+
               .msgImg {
                 max-width: 100%;
                 max-height: 400px;
                 justify-content:center;
                 margin-top: 18px;
               }
+
               .msgImg img {
                 width: 215px !important;
                 height: 230px !important;
@@ -533,7 +554,7 @@
                   height: 175px !important;
                 }
               }
-    
+
               .msgVideo {
                 max-width: 100%;
                 max-height:400px;
@@ -558,34 +579,6 @@
               float:right; 
     
               background-color: none;
-            }
-           
-            .user-message {
-              .text{
-                width: auto;
-                max-width:65vw;
-                padding: 4px 6px;
-                box-sizing: border-box;
-                text-align: left;
-                word-wrap: break-word;
-                clear: both;
-                border: 1px solid;
-                border-radius: 10px 10px 0 10px;
-              }
-              .send-icon {
-                img{
-                  width: 15px;
-                  border: 1px solid rgba(255,255,255, .5);
-                  opacity: 0.5;
-                  margin-left: 10px;
-                }
-    
-                &.high {
-                  img {
-                    opacity: 1;
-                  }
-                }
-              }
             }
           }
     
