--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -1958,6 +1958,136 @@ input {
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
+
+    .procu {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      top: 35%;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-justify-content: center;
+      justify-content: center;
+      align-items: center;
+      -webkit-align-items: center;
+      margin: 10px auto 20px auto;
+      .scene {
+        display: flex;
+        width: 150px;
+        height: 150px;
+        -ms-perspective: 400px;
+        -moz-perspective: 400px;
+        -webkit-perspective: 400px;
+        perspective: 400px;
+        transition: 0.3s all ease-in-out;
+        &:hover {
+          transform: scale(1.2);
+        }
+        .cube {
+          width: 150px;
+          height: 150px;
+          position: relative;
+          -webkit-transform-style: preserve-3d;
+          -moz-transform-style: preserve-3d;
+          -ms-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+          -webkit-animation-name: cube;
+          -webkit-animation-duration: 30s;
+          -webkit-animation-timing-function: linear;
+          -webkit-animation-iteration-count: infinite;
+          -webkit-animation-direction: normal;
+          animation-name: cube;
+          animation-duration: 30s;
+          animation-timing-function: linear;
+          animation-iteration-count: infinite;
+          animation-direction: normal;
+          .cube-face{
+            width: inherit;
+            height: inherit;
+            position: absolute;
+            overflow: hidden;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-justify-content: center;
+            justify-content: center;
+            align-items: center;
+            opacity: .9;
+            border: 4px solid transparent;
+            transition: .5s;
+            &.cube-face-front {
+              // background-color: black;
+              -webkit-transform: translate3d(0,0, 78px);
+              -ms-transform: translate3d(0,0, 78px);
+              transform: translate3d(0,0, 78px);
+            }
+            &.cube-face-back {
+              // background-color: black;
+              -webkit-transform: rotatey(180deg) translate3d(0,0,78px);
+              -ms-transform: rotatey(180deg) translate3d(0,0,78px);
+              transform: rotatey(180deg) translate3d(0,0,78px);
+            }
+            &.cube-face-left {
+              // background-color: black;
+              -webkit-transform: rotatey(-90deg) translate3d(0,0,78px);
+              -ms-transform: rotatey(-90deg) translate3d(0,0,78px);
+              transform: rotatey(-90deg) translate3d(0,0,78px);
+            }
+            &.cube-face-right{
+              // background-color: black;
+              -webkit-transform: rotatey(90deg) translate3d(0,0,78px);
+              -ms-transform: rotatey(90deg) translate3d(0,0,78px);
+              transform: rotatey(90deg) translate3d(0,0,78px);
+            }
+            img {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
+    .artcubecase {
+      width: 88%;
+      height: 60px;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: 2;
+      transform: translate(-7%, -50%);
+   
+      .procusmallmove {
+        // text-align: center;
+        display: flex;
+        // justify-content: center;
+        align-items: center;
+        padding: 5px 0 5px 0;
+        z-index: 9;
+        position: relative;
+        // margin-top:10px;
+        margin-left:13px;
+        .scenesmall {
+          display: inline-block;
+          margin-bottom: 0;
+          width: 30px;
+          height: 30px;
+          perspective: 200px;
+          &.white {
+            .cubesmallmove {
+              .cube-facesmall {
+                border-color: white;
+                box-shadow:1px 1px 10px white, -1px -1px 10px white;
+              }
+            }
+          }
+          &:hover {
+            transform: scale(1.3);
+            transition: .3s;
+          }
+        }
+      }
+    }
     .feelImg div {
        display:block;
        position:absolute;
@@ -5493,8 +5623,7 @@ img {
 
 .model {
   position: absolute;
-  display: flex;
-  width: 450px;
+  width: 550px;
   height: 80vh;
   left: 0%;
   top: 0%;
@@ -5504,35 +5633,45 @@ img {
   background-color: rgb(26, 25, 25);
   border: 1px solid #444;
   z-index: 20;
-  @media @mobile{
-    width: 80%;
-    height: 51vh;
-  }
-  // .model .model-image .ReactCrop > div {
-  //   height: 350px;
+
+  // @media @mobile{
+  //   width: 280px;
+  //   height: 60%;
   // }
+
+  @media screen and (max-width: 768px) and (min-width:600px){
+    width: 400px;
+    height: 70%;
+  }
+
+
+  @media screen and (max-width: 599px) and (min-width:400px){
+    width: 350px;
+    height: 60%;
+  }
+
+  @media screen and (max-width: 399px){
+    width: 280px;
+    height: 50%;
+  }
   .model-actions {
-    position: absolute;
-    bottom: 23px;
     box-sizing: border-box;
     width: 90%;
-    left: 5%;
-    height: 20%;
+    margin: 0 auto;
 
     .options {
       display: flex;
       flex-direction: row;
       justify-content: space-around;
       @media screen and (max-width: 768px) and (min-width:600px){
-        margin-top: 25px;
+        margin-top: 9px;
       }
       @media screen and (max-width: 600px) and (min-width:490px){
-        margin-top: 25px;
+        margin-top: 6px;
       }
-      @media screen and (max-width: 490px) and (min-width:450px){
-        margin-top: 15px;
+      @media screen and (max-width: 490px) and (min-width:320px){
+        margin-top: 1px;
       }
-
       i {
         cursor: pointer;
         &.selected {
@@ -5547,38 +5686,10 @@ img {
     }
 
     .done {
-      position: absolute;
-      width: 100%;
-      bottom: 0;
-      @media screen and (max-width: 768px){
-        top: 53px;
-      }
-      @media screen and (max-width: 700px){
-        top: 52px;
-      }
-      @media screen and (max-width: 600px){
-        top: 50px;
-      }
-      @media screen and (max-width: 490px){
-        top: 50px;
-      }
-      @media screen and (max-width: 450px){
-        top: 47px;
-      }
-      @media screen and (max-width: 420px){
-        top: 49px;
-      }
-      @media screen and (max-width: 400px){
-        top: 47px;
-      }
-      @media screen and (max-width: 375px){
-        top: 43px;
-      }
-      @media screen and (max-width: 360px) {
-        top: 41px;
-      }
-      @media screen and (max-width: 320px) {
-        top: 37px;
+      width: 80%;
+      margin: 10px auto 0 auto;
+      @media screen and (max-width: 720px){
+        margin-top: 3px;
       }
       .btn-done {
         padding: 10px;
@@ -5593,7 +5704,7 @@ img {
         margin-bottom: 5px;
         @media @mobile {
           margin: 0 auto;
-          width: 76%;
+          width: 100%;
           padding: 7px;
         }
       }
@@ -5601,9 +5712,6 @@ img {
   }
 
   .model-image {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 80%;
     .ReactCrop {
@@ -5616,7 +5724,7 @@ img {
           margin: 0 auto;
           width: 100%;
           height:100%;
-          object-fit: contain;
+          // object-fit: contain;
         }
       }
     }
